# JSON-language

./: .gitignore  README.md  control
.github/workflows/: c-cpp.yml  cmake-single-platform.yml  cmake.yml  makefile.yml
json-server/: CMakeLists.txt  Makefile  cmake_install.cmake  galaxy.json  serverConfig.json  testCase.json
json-server/include/: crow.h  crow_all.h
json-server/src/: GalaxyServer.cpp  GalaxyServer.h  MyExceptions.h  RequestHandlers.cpp  RequestHandlers.h  main.cpp
json-server/tests/: CMakeLists.txt  main_test.cpp
server/: CMakeLists.txt
server/src/: main.cpp
teacher-library/: CMakeLists.txt
teacher-library/include/: Teachers.h
teacher-library/src/: Teachers.cpp  main.cpp
teacher-library/tests/: CMakeLists.txt  main_test.cpp
